--- a/index.html
+++ b/index.html
@@ -409,9 +409,24 @@
                     <div id="note-area"></div>
                 </div>
                 <p class="footer-note">
-                    Simulação educativa: valores podem variar conforme legislação estadual e atualizações oficiais.
-                    Ajuste as tabelas no código para refletir mudanças futuras.
+                    <strong>Simulação educativa.</strong><br>
+                    Os valores apresentados são estimativas baseadas em regras públicas e médias praticadas no
+                    Brasil.<br><br>
+
+                    <strong>Como os cálculos são feitos:</strong><br>
+                    • <strong>IPVA:</strong> valor do veículo × alíquota (percentual de imposto definido pelo estado)
+                    aplicada à UF.<br>
+                    • <strong>Isenção de IPVA:</strong> aplicada automaticamente para motos até 180cc (a partir de 2026,
+                    conforme o estado).<br>
+                    • <strong>Licenciamento:</strong> taxa anual fixa, estimada conforme o estado.<br>
+                    • <strong>DPVAT:</strong> valor médio estimado conforme o tipo de veículo.<br><br>
+
+                    <strong>Total anual:</strong> soma de IPVA + Licenciamento + DPVAT.<br><br>
+
+                    Os valores oficiais podem variar. Para conferência, consulte o Detran ou a Secretaria da Fazenda do
+                    seu estado.
                 </p>
+
             </section>
         </div>
     </div>
